@@ -1,3 +1,8 @@
+2007-02-23  Milan Zamazal  <pdm@brailcom.org>
+
+	* pytis/data/_test.py: Ensure user transaction is finished (if
+	possible) before test_partial_transaction is exited.
+	
 2007-02-23  Tomas Cerha  <cerha@brailcom.org>
 
 	* pytis/web/form.py: Added basic support for Binary data types.
